# relocator

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
.github/workflows/: release.yml
crates/swapcore/: Cargo.toml
crates/swapcore/src/: lib.rs  movefile.rs  planner.rs  scan.rs  space.rs
crates/swapdirs/: Cargo.toml
crates/swapdirs/src/: main.rs
